--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.11.0",
+    "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/mongoose-sequence": "^3.0.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
