--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@mui/material": "^6.4.6",
     "axios": "^1.8.1",
     "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^1.21.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.11.0",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
